--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,17 @@ padding:10px;
   width:auto;
 }
 
+.mobile-fab-tip:hover {
+  position: fixed;
+  right: 85px;
+  padding:0px 0.5rem;
+  text-align: right;
+  background-color: #f1f1f1;
+  border-radius: 2px;
+  color: black;
+  width:auto;
+}
+
 .spacer {
   padding:10px;
 }
@@ -516,7 +527,7 @@ The rotateX/Y reversal is easy since it's not animated, so just use its opposite
    bottom:0px;
   right: 0px;
   margin: 0 auto;
-  height:100px;
+  height:300px;
   width:100px;
   z-index: 7;
 }
@@ -528,7 +539,7 @@ The rotateX/Y reversal is easy since it's not animated, so just use its opposite
 }
 
 #wrapper:hover span {
-  transition: transform 0.4s;
+  transition: transform 0.6s;
   transition-delay: 0.1s;
   transform: translateY(-310px);
 }
