--- a/css/materialize.css
+++ b/css/materialize.css
@@ -7969,7 +7969,7 @@ small {
   overflow-x: auto;
   overflow-y: hidden;
   height: 48px;
-  background-color: #fff;
+  background-color: white;
   margin: 0 auto;
   width: 100%;
   white-space: nowrap;
@@ -7996,7 +7996,7 @@ small {
 }
 
 .tabs .tab a {
-  color: #ee6e73;
+  color: black;
   display: block;
   width: 100%;
   height: 100%;
@@ -8006,7 +8006,7 @@ small {
 }
 
 .tabs .tab a:hover {
-  color: #f9c9cb;
+  color: black;
 }
 
 .tabs .tab.disabled a {
@@ -8018,7 +8018,7 @@ small {
   position: absolute;
   bottom: 0;
   height: 2px;
-  background-color: #f6b2b5;
+  background-color: black;
   will-change: left, right;
 }
 
