--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
  @import url(http://fonts.googleapis.com/css?family=Righteous);
 
 body{
-    background-color: #f1f1f1;
+    background-color: #eceff1;
     color:white;
 }
 
