--- a/css/materialize.css
+++ b/css/materialize.css
@@ -7447,7 +7447,7 @@ nav .input-field label {
 }
 
 nav .input-field label i {
-  color: rgba(255, 255, 255, 0.7);
+  color: #2196f3;
   transition: color .3s;
 }
 
@@ -8934,7 +8934,7 @@ textarea.materialize-textarea + label:after {
 }
 
 .input-field label {
-  color: #9e9e9e;
+  color: black;
   position: absolute;
   top: 0.8rem;
   left: 0.75rem;
@@ -8957,7 +8957,7 @@ textarea.materialize-textarea + label:after {
 }
 
 .input-field .prefix.active {
-  color: #26a69a;
+  color: #2196f3;
 }
 
 .input-field .prefix ~ input,
