--- a/space-webapp/src/main/webapp/css/materialize.css
+++ b/space-webapp/src/main/webapp/css/materialize.css
@@ -7960,6 +7960,53 @@ small {
     float: right;
   }
 }
+.peopletabs {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  overflow-x: auto;
+  overflow-y: hidden;
+  height: 125px;
+  background-color: transparent;
+  margin: 0 auto;
+  width: 100%;
+  white-space: nowrap;
+}
+
+.peopletabs .tab {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  display: block;
+  float: left;
+  text-align: center;
+  line-height: 48px;
+  height: 48px;
+  padding: 0;
+  margin: 0;
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  letter-spacing: .8px;
+  width: 125px;
+  height: 125px;
+  min-width: 125px;
+  background-color: transparent;
+}
+
+.peopletabs .tab a {
+  font-size: 9px;
+  color: black;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transition: color .28s ease;
+}
+
 
 .tabs {
   display: -webkit-flex;
