--- a/space-webapp/src/main/webapp/css/style.css
+++ b/space-webapp/src/main/webapp/css/style.css
@@ -20,6 +20,16 @@ body{
     background: -webkit-gradient(linear, 0 0, 100% 0, from(#eceff1), to(#eceff1), color-stop(50%, #546e7a));
 }
 
+.navButton {
+
+}
+
+ .backdrop{
+       background-color: #455a64;
+     }
+
+
+
 .textShadow {
 font-weight: bold;
 font-family: Righteous;
@@ -33,6 +43,8 @@ cursor:default;
   }
 
 
+
+/*Rocket Floating Button in index.html*/
 .box img {
     -webkit-transition:1s;
     position:absolute;
@@ -70,7 +82,7 @@ cursor:default;
 }
 
 .spacer {
-  padding:10px;
+  
 }
 
 .spaceCircleWrapper {
@@ -274,7 +286,7 @@ background: linear-gradient(135deg, #cedce7 0%,#596a72 100%); /* W3C, IE10+, FF1
   margin-left: -1.5em;
   
   color: black;
-  background-color: #2196f3; /*standard blue*/
+  background-color: white; /*standard blue*/
   border-radius: 50%;
   text-align: center;
   line-height: 3em;
@@ -317,7 +329,7 @@ background: linear-gradient(135deg, #cedce7 0%,#596a72 100%); /* W3C, IE10+, FF1
   margin-left: -1.5em;
   
   color: black;
-  background-color: #00e676; /*standard green*/
+  background-color: white; /*standard green*/
   border-radius: 50%;
   text-align: center;
   line-height: 3em;
@@ -360,7 +372,7 @@ background: linear-gradient(135deg, #cedce7 0%,#596a72 100%); /* W3C, IE10+, FF1
   margin-left: -1.5em;
   
   color: black;
-  background-color: #ffc107; /*standard yellow*/
+  background-color: white; /*standard yellow*/
   border-radius: 50%;
   text-align: center;
   line-height: 3em;
@@ -402,7 +414,7 @@ background: linear-gradient(135deg, #cedce7 0%,#596a72 100%); /* W3C, IE10+, FF1
   margin-left: -1.5em;
   
   color: black;
-  background-color: #ff5722; /*standard red*/
+  background-color: white; /*standard red*/
   border-radius: 50%;
   text-align: center;
   line-height: 3em;
@@ -445,7 +457,7 @@ background: linear-gradient(135deg, #cedce7 0%,#596a72 100%); /* W3C, IE10+, FF1
   margin-left: -1.5em;
   
   color: black;
-  background-color: #ab47bc; /*standard purple*/
+  background-color: white; /*standard purple*/
   border-radius: 50%;
   text-align: center;
   line-height: 3em;
@@ -554,119 +566,311 @@ The rotateX/Y reversal is easy since it's not animated, so just use its opposite
 
 
 
+/**/
 
-nav ul a,
-nav .brand-logo {
-  color: #444;
+.headerSpace{
+background: url(http://phandroid.s3.amazonaws.com/wp-content/uploads/2014/05/purple-nebula.jpg);
+padding-top:50px;
+padding-bottom:20px;
+
+}
+.people{
+  padding:15px;
 }
 
-p {
-  line-height: 2rem;
+.peopleImg {
+    border-radius:50%;
 }
 
-.button-collapse {
-  color: white;
-}
-
-.sidebar{
-    padding-top: 200px;
-}
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
+.textShadowTitle {
+font-weight: bold;
+font-family: Righteous;
+padding:10px;
+color: white;
+letter-spacing: 4px;
+text-shadow: rgb(224, 224, 224) 1px 1px 0px;
+ -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+cursor:default;
   }
-  #index-banner .section {
-    top: 10%;
-  }
+
+  .planet {
+  width: 9em;
+  height: 9em;
+  margin-top: -4.5em;
+  margin-left: -4.5em;
+  
+  border-radius: 50%;
+  background: #cedce7; /* Old browsers */
+background: -moz-linear-gradient(-45deg, #cedce7 0%, #596a72 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(-45deg, #cedce7 0%,#596a72 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(135deg, #cedce7 0%,#596a72 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  
+  text-align: center;
+  line-height: 9em;
+  
+  -webkit-transform: rotateY(30deg) rotateX(-75deg);
+  transform: rotateY(30deg) rotateX(-75deg);
 }
 
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
+.satellite-orbit1 {
+  width: 16em;
+  height: 16em;
+  margin-top: -8em;
+  margin-left: -8em;
+  
+  border: 5px solid white;
+  border-radius: 50%;
+  
+  -webkit-animation-name: orbit;
+  animation-name: orbit;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
-.icon-block {
-  padding: 0 15px;
-}
-.icon-block .material-icons {
-  font-size: inherit;
-}
-
-footer.page-footer {
-  margin: 0;
-}
-
-.button, .button--orange, .email_adder__button, .email {
-  font-size: 16px;
-  line-height: 15px;
-  padding: 15px;
-  color: white;
-  font-family: arial, sans-serif;
-  letter-spacing: 1px;
-  border: solid 1px #c0c0c0;
-  border-radius: 3px;
-  background: black;
-  background: linear-gradient(#cdcdcd, #b6b6b6);
-  cursor: pointer;
+.satellite1 {
+  top: 100%;
+  width: 3em;
+  height: 3em;
+  margin-top: -1.5em;
+  margin-left: -1.5em;
+  
+  color: black;
+  background-color: white; /*standard blue*/
+  border-radius: 50%;
+  text-align: center;
+  line-height: 3em;
+  
+  -webkit-animation-name: invert-orbit;
+  animation-name: invert-orbit;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
-.button--orange, .email_adder__button, .email {
-  border: solid 1px #db8e00;
-  background: black;
-  background: linear-gradient(#ffae1a, #eb9800);
-}
-.button--orange:hover, .email_adder__button:hover, .email:hover, .button--orange:focus, .email_adder__button:focus, .email:focus {
-  background: black;
-  background: linear-gradient(#ffb329, #faa200);
-}
-
-.email_list {
-  padding: 0 15px;
-  border-bottom: solid 1px #c0c0c0;
-}
-
-.navpanel {
-  padding: 15px;
-  text-align: right;
-}
-
-.email_adder {
-  display: flex;
-  padding: 15px;
-  line-height: 15px;
-  font-size: 0px;
-  font-family: arial, sans-serif;
-}
-.email_adder__input, .email_adder__button {
-  font-size: 16px;
-  font-family: inherit;
-  padding: inherit;
-  line-height: inherit;
-  vertical-align: top;
-}
-.email_adder__input {
-  flex: 1 1 auto;
-  width: 100%;
-  border: solid 1px #c0c0c0;
-  background: linear-gradient(#fff, #f9f9f9);
-}
-.email_adder__button {
-  flex: 0 1 auto;
-  line-height: 16px;
-  border-left: 0;
-  padding-bottom: 13px;
-  border-radius: 0;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
+.satellite-orbit2 {
+  width: 16em;
+  height: 16em;
+  margin-top: -8em;
+  margin-left: -8em;
+  
+  border: 3px solid white;
+  opacity:1;
+  border-radius: 50%;
+  
+  -webkit-animation-name: orbit;
+  animation-name: orbit;
+  -webkit-animation-duration: 10s;
+  animation-duration: 10s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
-.email {
-  display: inline-block;
-  margin: 0 10px 15px 0;
+.satellite2 {
+  top: 100%;
+  width: 3em;
+  height: 3em;
+  margin-top: -1.5em;
+  margin-left: -1.5em;
+  
+  color: black;
+  background-color: white; /*standard green*/
+  border-radius: 50%;
+  text-align: center;
+  line-height: 3em;
+  
+  -webkit-animation-name: invert-orbit;
+  animation-name: invert-orbit;
+  -webkit-animation-duration: 10s;
+  animation-duration: 10s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
 }
+
+.satellite-orbit3 {
+  width: 16em;
+  height: 16em;
+  margin-top: -8em;
+  margin-left: -8em;
+  
+  border: 3px solid white;
+  opacity:1;
+  border-radius: 50%;
+  
+  -webkit-animation-name: orbit;
+  animation-name: orbit;
+  -webkit-animation-duration: 8s;
+  animation-duration: 8s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+.satellite3 {
+  top: 100%;
+  width: 3em;
+  height: 3em;
+  margin-top: -1.5em;
+  margin-left: -1.5em;
+  
+  color: black;
+  background-color: white; /*standard yellow*/
+  border-radius: 50%;
+  text-align: center;
+  line-height: 3em;
+  
+  -webkit-animation-name: invert-orbit;
+  animation-name: invert-orbit;
+  -webkit-animation-duration: 8s;
+  animation-duration: 8s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+.satellite-orbit4 {
+  width: 16em;
+  height: 16em;
+  margin-top: -8em;
+  margin-left: -8em;
+  
+  border: 3px solid white;
+  border-radius: 50%;
+  
+  -webkit-animation-name: orbit;
+  animation-name: orbit;
+  -webkit-animation-duration: 20s;
+  animation-duration: 20s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+.satellite4 {
+  top: 100%;
+  width: 3em;
+  height: 3em;
+  margin-top: -1.5em;
+  margin-left: -1.5em;
+  
+  color: black;
+  background-color: white; /*standard red*/
+  border-radius: 50%;
+  text-align: center;
+  line-height: 3em;
+  
+  -webkit-animation-name: invert-orbit;
+  animation-name: invert-orbit;
+  -webkit-animation-duration: 20s;
+  animation-duration: 20s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+.satellite-orbit5 {
+  width: 16em;
+  height: 16em;
+  margin-top: -8em;
+  margin-left: -8em;
+  
+  border: 3px solid white;
+  border-radius: 50%;
+  opacity:1;
+  
+  -webkit-animation-name: orbit;
+  animation-name: orbit;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+.satellite5 {
+  top: 100%;
+  width: 3em;
+  height: 3em;
+  margin-top: -1.5em;
+  margin-left: -1.5em;
+  
+  color: black;
+  background-color: white; /*standard purple*/
+  border-radius: 50%;
+  text-align: center;
+  line-height: 3em;
+  
+  -webkit-animation-name: invert-orbit;
+  animation-name: invert-orbit;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+
+@-webkit-keyframes orbit {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(360deg);
+    }
+}
+@keyframes orbit {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(360deg);
+    }
+}
+
+/*
+In order to invert the rotation, do the rotate* transforms in reverse order.
+
+Here, we rotated the system with rotateX(75deg) rotateY(-30deg), and then we are animating the rotation of the orbit with rotateZ(0-360deg). To reverse that, we need to reverse the last transform applied (rotateZ), then rotateY, then rotateX.
+
+The rotateX/Y reversal is easy since it's not animated, so just use its opposite (30deg, -75deg). The rotateZ is trickier since it's animating, but since it's rotating from 0 to 360, we just need to animate the satellite from 360 to 0.
+*/
+@-webkit-keyframes invert-orbit {
+    0% {
+        transform: rotateZ(360deg) rotateY(30deg) rotateX(-75deg);
+    }
+
+    100% {
+        transform: rotateZ(0deg) rotateY(30deg) rotateX(-75deg);
+    }
+}
+@keyframes invert-orbit {
+    0% {
+        transform: rotateZ(360deg) rotateY(30deg) rotateX(-75deg);
+    }
+
+    100% {
+        transform: rotateZ(0deg) rotateY(30deg) rotateX(-75deg);
+    }
+}
+
 
 
 
