Landing page source files

--- a/space-webapp/src/main/webapp/css/materialize.css
+++ b/space-webapp/src/main/webapp/css/materialize.css
@@ -7960,53 +7960,6 @@ small {
     float: right;
   }
 }
-.peopletabs {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-  overflow-x: auto;
-  overflow-y: hidden;
-  height: 125px;
-  background-color: transparent;
-  margin: 0 auto;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.peopletabs .tab {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
-  display: block;
-  float: left;
-  text-align: center;
-  line-height: 48px;
-  height: 48px;
-  padding: 0;
-  margin: 0;
-  text-transform: uppercase;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  letter-spacing: .8px;
-  width: 125px;
-  height: 125px;
-  min-width: 125px;
-  background-color: transparent;
-}
-
-.peopletabs .tab a {
-  font-size: 9px;
-  color: black;
-  display: block;
-  width: 100%;
-  height: 100%;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  transition: color .28s ease;
-}
-
 
 .tabs {
   display: -webkit-flex;
@@ -8015,8 +7968,7 @@ small {
   position: relative;
   overflow-x: auto;
   overflow-y: hidden;
-  height: 50px;
-  background-color: #eceff1;
+  background-color: transparent;
   margin: 0 auto;
   width: 100%;
   white-space: nowrap;
@@ -8031,28 +7983,18 @@ small {
   float: left;
   text-align: center;
   line-height: 48px;
-  height: 48px;
   padding: 0;
   margin: 0;
   text-transform: uppercase;
   text-overflow: ellipsis;
   overflow: hidden;
   letter-spacing: .8px;
-  width: 15%;
-  min-width: 80px;
-  background-color: #eceff1;
+  width: 50px;
+  min-width: 50px;
+  background-color: transparent;
 }
 
-.tabs .tab a {
-  font-size: 9px;
-  color: black;
-  display: block;
-  width: 100%;
-  height: 100%;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  transition: color .28s ease;
-}
+
 
 .tabs .tab a:hover {
   color: black;
@@ -8067,7 +8009,7 @@ small {
   position: absolute;
   bottom: 0;
   height: 4px;
-  background-color: black;
+  background-color: #ffc107;
   will-change: left, right;
 }
 
