--- a/space-webapp/src/main/webapp/css/materialize.css
+++ b/space-webapp/src/main/webapp/css/materialize.css
@@ -7758,7 +7758,7 @@ small {
   margin: 0.5rem 0 1rem 0;
   background-color: #fff;
   transition: box-shadow .25s;
-  border-radius: 10%;
+  border-radius: 6px;
 }
 
 .card .card-title {
@@ -10404,7 +10404,7 @@ select {
 }
 
 .slider .slides {
-  background-color: #9e9e9e;
+  background-color: #eceff1;
   margin: 0;
   height: 400px;
 }
@@ -10413,9 +10413,9 @@ select {
   opacity: 0;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 25%;
   z-index: 1;
-  width: 100%;
+  width: 50%;
   height: inherit;
   overflow: hidden;
 }
@@ -10423,6 +10423,7 @@ select {
 .slider .slides li img {
   height: 100%;
   width: 100%;
+  border-radius: 10%;
   background-size: cover;
   background-position: center;
 }
@@ -10460,7 +10461,7 @@ select {
   height: 16px;
   width: 16px;
   margin: 0 12px;
-  background-color: #e0e0e0;
+  background-color: black;
   transition: background-color .3s;
   border-radius: 50%;
 }
@@ -10473,7 +10474,7 @@ select {
   overflow: hidden;
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 200px;
   -webkit-perspective: 500px;
           perspective: 500px;
   -webkit-transform-style: preserve-3d;
@@ -10483,7 +10484,8 @@ select {
 }
 
 .carousel .carousel-item {
-  width: 200px;
+  margin-top:30px;
+  width: 130px;
   position: absolute;
   top: 0;
   left: 0;
@@ -10500,8 +10502,8 @@ select {
 }
 
 .carousel.carousel-slider .carousel-item {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   position: absolute;
   top: 0;
   left: 0;
