--- a/space-webapp/src/main/webapp/css/flickity.css
+++ b/space-webapp/src/main/webapp/css/flickity.css
@@ -179,7 +179,7 @@ text-align: center;
 .flickity-page-dots {
   position: absolute;
   width: 100%;
-  bottom:10%;
+  bottom:0%;
   margin-top:30px;
   padding-top:100px;
   list-style: none;
@@ -269,43 +269,32 @@ h3 {
 
 .flickity-prev-next-button {
   position: absolute;
-  top: -10%;
   width: 44px;
   height: 44px;
   border: none;
   border-radius: 50%;
-  background: white;
-  background: hsla(0, 0%, 100%, 0.75);
+  background: none;
   cursor: pointer;
   /* vertically center */
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+  -webkit-transform: translateY(-16px);
+      -ms-transform: translateY(-16px);
+          transform: translateY(-16px);
 }
 
-.flickity-prev-next-button:hover { background: white; }
+.flickity-prev-next-button:hover { background: transparent; }
 
 .flickity-prev-next-button:focus {
   outline: none;
-  box-shadow: 0 0 0 5px #09F;
+  box-shadow: 0 0 0 5px white;
 }
 
 .flickity-prev-next-button:active {
-  filter: alpha(opacity=60); /* IE8 */
-  opacity: 0.6;
+  
 }
 
-.flickity-prev-next-button.previous { left: 10px; }
-.flickity-prev-next-button.next { right: 10px; }
+.flickity-prev-next-button.previous { left: 20%; }
+.flickity-prev-next-button.next { right: 20%; }
 /* right to left */
-.flickity-rtl .flickity-prev-next-button.previous {
-  left: auto;
-  right: 10px;
-}
-.flickity-rtl .flickity-prev-next-button.next {
-  right: auto;
-  left: 10px;
-}
 
 .flickity-prev-next-button:disabled {
   filter: alpha(opacity=30); /* IE8 */
@@ -316,13 +305,15 @@ h3 {
 .flickity-prev-next-button svg {
   position: absolute;
   left: 20%;
-  top: 20%;
+  top: 25%;
   width: 60%;
   height: 60%;
 }
 
 .flickity-prev-next-button .arrow {
-  fill: #333;
+  fill: white;
+   opacity: 0.25;
+ 
 }
 
 /* color & size if no SVG - IE8 and Android 2.3 */
@@ -337,7 +328,7 @@ h3 {
   position: absolute;
   top:100%;
   width: 100%;
-  bottom: -40px;
+  bottom: -60px;
   padding: 0;
   list-style: none;
   text-align: center;
