--- a/space-webapp/src/main/webapp/css/style.css
+++ b/space-webapp/src/main/webapp/css/style.css
@@ -38,7 +38,11 @@ body{
        background-color: #455a64;
      }
 
-
+.bottomNavBar {
+  position:fixed;
+  bottom:0%;
+  width:100%;
+}
 
 .textShadow {
 font-weight: bold;
@@ -186,45 +190,6 @@ cursor:default;
   -ms-transform: scale(0.8);
   transform: scale(0.8);
   opacity: 0;
-}
-.popout1 .panel1 {
-  box-shadow: 0 0 5px rgba(0,0,0,0.15);
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 320px;
-  z-index:999;
-  text-align: center;
-  overflow: hidden;
-  visibility: hidden;
-  transform: scale(0);
-  transform-origin: 17% 30%;
-  border-radius: 1000px;
-  transition: transform 0.2s, visibility 0s 0.2s, opacity: 0.2s;
-  opacity: 0;
-}
-.popout1 .panel1.active {
-  height: auto;
-  opacity: 1;
-  visibility: visible;
-  transform: scale(1.0);
-  transition: transform 0.2s, visibility 0s 0s, opacity 0.2s;
-}
-.popout1 .panel-header1 {
-  padding: 40px;
-  font-size: 16px;
-  background-color: #34495e;
-  color: #fff;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-.popout1 .panel-body1 {
-  padding: 10px 20px;
-  background-color: #fff;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  font-size: 11px;
-  color: #aaa;
 }
 
 
