--- a/space-webapp/src/main/webapp/css/styleAgreement.css
+++ b/space-webapp/src/main/webapp/css/styleAgreement.css
@@ -12,3 +12,11 @@
 .icon-block .material-icons {
 	font-size: inherit;
 }
+
+body {
+	background-color:#eceff1;
+}
+
+#logo-container{
+color:#78909c;
+}
