--- a/space-webapp/src/main/webapp/css/style.css
+++ b/space-webapp/src/main/webapp/css/style.css
@@ -28,6 +28,100 @@ body{
     background: -webkit-gradient(linear, 0 0, 100% 0, from(#546e7a), to(#546e7a), color-stop(50%, white));
 }
 
+/*Rocket Floating Button in index.html*/
+.box img {
+    -webkit-transition:1s;
+    position:absolute;
+    bottom: 25px; 
+    right: 17px;
+    width:70px;
+    height: 70px;
+    z-index:999;
+
+}
+.box img.clicked{
+    margin-bottom:300px;
+ }
+
+.mobile-fab-tip {
+  position: fixed;
+  right: 85px;
+  padding:0px 0.5rem;
+  text-align: right;
+  background-color: #f1f1f1;
+  border-radius: 2px;
+  color: black;
+  width:auto;
+}
+
+.mobile-fab-tip:hover {
+  position: fixed;
+  right: 85px;
+  padding:0px 0.5rem;
+  text-align: right;
+  background-color: #f1f1f1;
+  border-radius: 2px;
+  color: black;
+  width:auto;
+}
+
+
+#wrapper {
+  width: 100px;
+  max-width: 100px;
+  height:400px;
+  position:fixed;
+  bottom: 20px; right: 2px;
+  z-index:999;
+}
+
+#wrapper:hover {
+  cursor: pointer;
+}
+
+
+.fa {
+  top: 310px; 
+  right: -2px;
+  margin: 0 auto;
+  height:100px;
+  width:100px;
+  position: relative;
+  z-index: 7
+}
+
+#rocketFloatButtons{
+   bottom:0px;
+  right: 0px;
+  margin: 0 auto;
+  height:300px;
+  width:100px;
+  z-index: 7;
+}
+
+#wrapper span {
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+
+#wrapper:hover span {
+  transition: transform 0.6s;
+  transition-delay: 0.1s;
+  transform: translateY(-280px);
+}
+
+.buttonRow {
+  position:relative;
+ display:block;
+transform: translate(0, 130%)
+
+
+}
+.spacer {
+  height:10px;
+}
+
 /*Nav Buttons*/
 
 #profileNav{
