--- a/space-webapp/src/main/webapp/css/styleLanding.css
+++ b/space-webapp/src/main/webapp/css/styleLanding.css
@@ -8,16 +8,16 @@ body {
 }
 
 body {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#020308+0,05172b+51,011428+84,012438+100 */
-  background: #020308;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#001848+0,001848+51,001848+84,001848+100 */
+  background: #001848;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #020308 0%, #05172b 51%, #011428 84%, #012438 100%);
+  background: -moz-linear-gradient(top, black 0%, #001848 51%, #001848 84%, black 100%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #020308 0%, #05172b 51%, #011428 84%, #012438 100%);
+  background: -webkit-linear-gradient(top, black 0%, #001848 51%, #001848 84%, black 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #020308 0%, #05172b 51%, #011428 84%, #012438 100%);
+  background: linear-gradient(to bottom, black 0%, #001848 51%, #001848 84%, black 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020308', endColorstr='#012438',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001848', endColorstr='#001848',GradientType=0 );
   /* IE6-9 */
   -webkit-perspective: 300;
   -moz-perspective: 300;
